--- a/index.html
+++ b/index.html
@@ -198,14 +198,14 @@
 				</div>
 				<h3>Product</h3>
 				<p>
-					Ik had een duidelijk concept voor ogen, nu was het tijd om het concept uit te werken en een werkend prototype te realiseren.
+					Voor het eindproduct voor deze challenge had ik een duidelijk concept voor ogen: de lichtgevende kattenoren. Nu was het tijd om het concept uit te werken en een werkend prototype te realiseren.
 				</p>
 				<img src="media/kattenoren (1).jpg" class="klein"/>
 				<p>
-					Voordat ik een eerste prototype ging maken heb ik een kleine schets gemaakt van de stoomdraden. Ik ging lampjes gebruiken. Voor de lampjes heb je een draad nodig die stoom levert, een weerstandje en een draad die de stroom weer afvoert. Ik heb nog gekeken of ik de twee lampjes nog kon combineren waardoor ik minder draden nodig zou hebben. Maar dit heb ik uiteindelijk niet gedaan omdat de lampjes niet op een bord maar aan de losse draden vast zouden zitten. Hierdoor was het lastig om de lampjes aan meerdere draden en aan elkaar te koppelen.
+					Voordat ik een eerste prototype ging maken heb ik een kleine schets gemaakt van het stoomcircuit. Ik ging lampjes gebruiken. Voor de lampjes heb je een draad nodig die stoom levert, een weerstandje en een draad die de stroom weer afvoert. Ik heb nog gekeken of ik de twee lampjes kon combineren waardoor ik minder draden nodig zou hebben. Maar dit heb ik uiteindelijk niet gedaan omdat de lampjes niet op een bord maar aan de losse draden vast zouden zitten. Hierdoor was het lastig om de lampjes aan meerdere draden en aan elkaar te koppelen.
 				</p>
 				<p>
-					Ik heb toen de code geschreven en een eerste prototype gemaakt. Het ging hier alleen om het stroomcircuit, nog niet om het design. Ik moest weten of de lampjes zouden werken op de manier die ik voor ogen had. Ik sloot alle draden op de Arduino aan, maakte de lampjes en draden vast aan de Arduino en uploadde de code, maar helaas gebeurde er niets. De lampjes gingen niet branden. Zelf nadat ik alles nog een keer had gecheckt werkte het niet.
+					Ik heb toen de code geschreven en een eerste prototype gemaakt. Het ging hier alleen om het stroomcircuit, nog niet om het design. Ik moest weten of de lampjes zouden werken op de manier die ik voor ogen had. Ik sloot alle draden op de Arduino aan, maakte de lampjes en draden vast aan de Arduino en uploadde de code, maar helaas gebeurde er niets. De lampjes gingen niet branden. Zelfs nadat ik alles nog een keer had gecheckt werkte het niet.
 				</p>
 				<div class="galerij">
 					<img src="media/kattenoren (2).png"/>
@@ -231,7 +231,7 @@
 					<iframe src="https://www.youtube.com/embed/MCOC34CYMdE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 				<p>
-					Ik had het prototype gemaakt en sloot het aan op de laptop. Het werkte! Ik verbond toen een powerbank aan de Arduino zodat ik de diadeem op mijn hoofd kon zetten. Hier,onder is het eindresultaat te zien.
+					Ik had het prototype gemaakt en sloot het aan op de laptop. Het werkte! Ik verbond toen een powerbank aan de Arduino zodat ik de diadeem op mijn hoofd kon zetten. Hieronder is het eindresultaat te zien.
 				</p>
 				<div class="galerij">
 					<img src="media/kattenoren (9).jpg"/>
@@ -272,6 +272,9 @@
 					De Google Home heeft een eigen persoonlijkheid en klinkt anders dan Siri of Alexa. Er wordt expres aandacht besteed aan de persoonlijkheid van de voice assistent want als gebruikers een connectie hebben met Google Home, maken ze er sneller gebruik van en voelen ze zich meer op gemak bij het gebruik. Google heeft zelfs een speciaal team dat zich bezig houdt met de persoonlijkheid van de Google Assistent. Dit uit zich in antwoorden op vragen zoals 'wat is je lievelingskleur?' en 'wat zijn je hobbies?'.
 				</p>
 				<h3>Experimenteren</h3>
+				<p>
+					In het werkcollege hebben we geëxperimenteerd met de software Processing en Computer Vision. <a href="#workshops">zie de workshop Computer Vision voor de resultaten.</a>
+				</a>
 				<p>
 					Na het onderzoek doen ben ik gaan experimenteren en met de techniek, in dit geval de software Processing. In het werkcollege had ik voorbeelden gezien van stipjes en vormen die zich als zelfstandige wezens rondbewogen over het scherm en zelfs kolonies vormden. Met dit idee ben ik gaan coderen. Ik had een wiskundige formule gevonden die je kan gebruiken om grafieken mee te maken. Door de variable t te veranderen in de coordinaten x(t) en y(t), kon ik een stip over het canvas laten bewegen. Door stukjes van de formule voor x en y te veranderen onstaan er steeds andere vormen die er vaak organisch uit zien. Een beetje alsof er cellen groeien, of een kronkelige plant. Om de vormen spectaculairder te maken heb ik gezorgd dat de hue van de stipjes verandert. Ik heb ook wat interactie toegevoegd door een getal in de formule te laten veranderen als er een toets wordt ingedrukt. Tenslotte is het me gelukt om twee formules te gebruiken als twee uiteinden van een lijn. Een aantal van mijn best gelukte experimenten met de vormen zijn hieronder te zien.
 				</p>
@@ -493,7 +496,7 @@ void beestSize(){
 				</script>
 				<h3>Reflectie</h3>
 				<p>
-					Ik vond dit een leuke challenge omdat ik mezelf erg herken in het toekennen van menselijke eigenschappen aan dingen zoals computers. Ik houd ook erg van dieren, en in deze challenge mochten we eigenlijk zelf een soort dier creëren. Ik ben wel sceptisch over artificial creatures in de toekomst. Ik houd er niet van als robots er heel realistisch uitzien, en ik denk dat het in de toekomst steds moeilijker wordt om robots van echte mensen te onderscheiden. Omdat robots geen bewustzijn en moraal hebben, vertrouw ik ze niet in gevaarlijke situaties. Als een robot bijvoorbeeld geprogrammeerd is om vooruit te lopen, zal hij dit doen, zelfs als er een slapende kat op zijn pad ligt (tenzij hier rekening mee is gehouden natuurlijk). Daarom vind ik dat er hier duidelijke regels moeten worden opgesteld. Bijvoorbeeld eisen die de veiligheid van zelfrijdende auto's garanderen.<br />
+					Ik vond dit een leuke challenge omdat ik mezelf erg herken in het toekennen van menselijke eigenschappen aan dingen zoals computers. Ik houd ook erg van dieren, en in deze challenge mochten we eigenlijk zelf een soort dier creëren. Ik ben wel sceptisch over artificial creatures in de toekomst. Ik houd er niet van als robots er heel realistisch uitzien, en ik denk dat het in de toekomst steds moeilijker wordt om robots van echte mensen te onderscheiden. Omdat robots geen bewustzijn en moraal hebben, vertrouw ik ze niet in gevaarlijke situaties. Als een robot bijvoorbeeld geprogrammeerd is om vooruit te lopen, zal hij dit doen, zelfs als er een slapende kat op zijn pad ligt (tenzij hier rekening mee is gehouden natuurlijk). Daarom vind ik dat er hier over duidelijke regels moeten worden opgesteld. Bijvoorbeeld eisen die de veiligheid van zelfrijdende auto's garanderen.<br />
 					Aan het begin van deze challenge was ik bang dat Processing erg ingewikkeld zou zijn, maar dit bleek erg mee te vallen en ik vond het zelfs leuk om er mee te experimenteren. Vooral het eerste experiment (de vormen met de formules) was erg leuk om te doen en heeft spectaculaire resultaten opgeleverd. Met mijn eindresultaat ben ik ook erg tevreden. Eerst had ik er een nieuwe functie aan toegvoegd, maar toen kwam er nog een nieuwe functie bij en toen nog een. Hierdoor werd het beest steeds uitgebreider. Ik wilde veel met Processing werken omdat we deze software net geleerd hadden. Achteraf gezien zou ik nog meer willen experimenteren met de mogelijkheden van de Arduino sensoren. Hiermee zou je meer een soort robotachtig wezen kunnen maken. 
 				</p>
 			</article>
@@ -507,15 +510,14 @@ void beestSize(){
 				<p>
 					<a href="http://gamelab.mit.edu/playfulsocialinteractiondesign/teeter/" target="_blank"><b>Teeter</b></a><br />
 					<i>Sophia Chesrow</i><br />
-					Teeter is een balansspel wat je met twee personen speelt. Er zijn verschillende soorten spellen die je met de balans kan doen: balance, wrestling, ping pong en dance. Sommige spellen zijn coöperatief en andere competitief. Het spel gaat om de sociale interactie tussen de spelers.<br />
+					Teeter is een balansspel wat je met twee personen speelt. Er zijn verschillende soorten spellen die je met de balans kan doen: balance, wrestling, ping pong en dance. Sommige spellen zijn coöperatief en andere competitief. Teeter gaat om de sociale interactie tussen de spelers.<br />
 					Het eerste wat mij opviel was het design van Teeter. Ik vind het een mooi en simpel design. Door de lichtjes valt het op en wordt je interesse gewekt. Ik vind het knap dat het spel zo voor zich spreekt dat er eigenlijk geen uitleg nodig is.
 				</p>
 				<p>
 					<a href="https://www.youtube.com/watch?v=KcaKocRXCB4" target="_blank"><b>The Speed Camera Lottery</b></a><br />
 					<i>Kevin Richardson</i><br />
-					Een flitser 
-					De snelheid van voorbijrijdende auto's wordt op een bord weergeven. Chauffeurs die te hard rijden betalen een boete. De volgende persoon die zich wel aan de snelheidlimiet houdt krijgt het geld van de boete en wint daarmee de loterij. Hiermee moeten chauffeurs aangemoedigd worden om zich aan de snelheidslimiet te houden.<br />
-					Ik denk dat dit een idee is wat goed zou werken. Door iedereen een kans te geven om de loterij te winnen als ze zich aan de snelheidslimiet houden, is het voor de mensen spannend of ze wel of niet iets winnen. Je geeft mensen een klein duwtje om minder hard te rijden.
+					De snelheid van voorbijrijdende auto's wordt gemeten en op een bord weergeven. Chauffeurs die te hard rijden betalen een boete. De volgende persoon die zich wel aan de snelheidlimiet houdt krijgt het geld van de boetes en wint daarmee de loterij. Hiermee moeten chauffeurs aangemoedigd worden om zich aan de snelheidslimiet te houden.<br />
+					Ik denk dat dit een idee is wat in het echt goed zou werken. Door iedereen een kans te geven om de loterij te winnen als ze zich aan de snelheidslimiet houden, is het voor de mensen spannend of ze wel of niet iets winnen. Je geeft mensen een kleine aanmoediging om minder hard te rijden.
 				</p>
 				<p>
 					<a href="https://www.youtube.com/watch?v=vWG6IWgX0Q8&list=PLED8A19B414F44DBF&index=133" target="_blank"><b>Give parents some peace!</b></a><br />
@@ -656,7 +658,7 @@ void beestSize(){
 					<img src="media/workshop_arduino (32).jpg"/>
 					<iframe src="https://www.youtube.com/embed/Sr9WGTIlDdY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
-				<h3>CV</h3>
+				<h3>Computer Vision</h3>
 				<div class="galerij">
 					<img src="media/workshop_processing (1).png"/>
 					<img src="media/workshop_processing (2).png"/>
@@ -694,10 +696,10 @@ void beestSize(){
 					De machine wordt in beweging gezet en via verschillende tandwielen en mechanismen wordt een arm met een pen eraan vast aangestuurd. De pen raakt een leeg vel papier en tekent er op. Doordat de machine de arm met de pen op verschillende manieren laat bewegen ontstaat er een tekening op het papier.
 				</p>
 				<p>
-					De machines zijn gemaakt van allerlei soorten materialen en onderdelen van spullen die soms geheel in de machines verwerkt zijn; zoals een emmer of een wiel van een kar. Het opvallende is dat de machines geen technologie bevatten en vaak worden aangedreven met menselijke kracht, bijvoorbeeld door iemand te laten trappen of aan een hendel te laten draaien. Door de tandwielen en mechanismes zonder een precies uitgedacht plan in elkaar te zetten heeft Tinguely zelf geen idee wat de uitkomst van de kunstwerken die de machines maken zou zijn. De gecreëerde kunstwerken ontstaan bij toeval.
+					De machines zijn gemaakt van allerlei soorten materialen en onderdelen van spullen die soms geheel in de machines verwerkt zijn; zoals een emmer of een wiel van een kar. Het opvallende is dat de machines geen technologie bevatten en vaak worden aangedreven met menselijke kracht, bijvoorbeeld door iemand te laten trappen of aan een hendel te laten draaien. Door de tandwielen en mechanismes zonder een precies uitgedacht plan in elkaar te zetten, heeft Tinguely zelf geen idee wat de uitkomst van de kunstwerken die de machines maken zou zijn. De gecreëerde kunstwerken ontstaan bij toeval.
 				</p>
 				<p>
-					De Métamatics zijn interessant voor HCI omdat de machines gaan over de relatie tussen mens en machines. Ze beginnen een discussie over de eigenaar van de kunstwerken. Is de kunstenaar de machine, de persoon die de machine aandrijft, of de maker van de machine? Ook is het een creatieve machine. Creativiteit is een menselijke eigenschap en er is tot op het heden discussie over de mogelijkheid van machines om creatief te zijn.
+					De Métamatics zijn interessant voor HCI omdat de machines gaan over de relatie tussen mens en machine. Ze beginnen een discussie over de eigenaar van de kunstwerken. Is de kunstenaar de machine, de persoon die de machine aandrijft, of de maker van de machine? Ook is het een creatieve machine. Creativiteit is een menselijke eigenschap en er is tot op het heden discussie over de mogelijkheid van machines om creatief te zijn.
 				</p>
 				<p>
 					Ik houd erg van kunst en maak zelf ook graag kunst. Dit project trok meteen mijn interesse omdat het niet allen een machine, maar ook een kunstproject is. De vragen die worden gesteld over kunst vind ik interessant. Als ik teken, gebruik ik programma’s op mijn laptop, en deze programma’s hebben invloed op de uitkomst van de tekening (bijvoorbeeld de kleuren die je kan gebruiken, het formaat). Zijn de programma’s dan ook een beetje kunstenaar? Bij het tekenen doe ik al het werk nog zelf maar bij bijvoorbeeld mijn experimenten in processing heb ik de code geschreven en een paar waardes aan een variabele toegekend, maar voert de computer de code uit en creëert de computer de kunst. Ik denk dat het belangrijk is om hierover na te denken, zeker omdat er in de toekomst steeds meer technologie zal ontstaan die kan helpen met kunstwerken maken, of zelf kunst maakt.
